@@ -1,5 +1,7 @@
 -- Version 0.1.0 (unreleased) --
 
+* Rename build option ASSUME_UTF8_ON_UNIX to
+  PATHIE_ASSUME_UTF8_ON_UNIX.
 * Switch license from GPL3 to BSD-2clause.
 * Drop support for expanding "~username/foo" constructs. This
   nonstandard extension was unportable and caused problems when
